<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>

    <!-- Sign up-->
    <string name="signup_fragment_label">Welcome to the location reminder app!\nDon\'t have an account?\nSignup!</string>
    <string name="signup_fragment_button">Sign up</string>
    <string name="fragment_signup_hint_password">Enter your password</string>
    <string name="fragment_signup_hint_email">Enter your email</string>
    <string name="fragment_signup_error_authentication">Authentication failed.</string>
    <string name="fragment_signup_warning_mail">Mail must not be empty</string>
    <string name="fragment_signup_warning_password">Password must not be empty</string>

    <!-- Login-->
    <string name="login_fragment_label">Welcome back to the location reminder app!</string>
    <string name="login_fragment_button">Login</string>


    <string name="select_location_fragment_user_info">Please select a location or a POI on the map to create a reminder</string>
    <string name="select_location_fragment_empty_marker">Please select a location to be saved!</string>

    <string name="activity_reminder_description_details">Reminder details</string>
    <string name="activity_reminder_description_title">Title:</string>
    <string name="activity_reminder_description_description">Description:</string>
    <string name="activity_reminder_description_location">Location:</string>


</resources>
